@@ -1,6 +1,7 @@
 0.9.7-1.21.8
  - Adding Upgrade item.
  - Adding upgrade item into storage.
+ - Adding additional slots for Storage when use Upgrade.
 0.9.6-1.21.8
  - Migrating to 1.21.8
 0.8.6-1.21.7
